// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clipRule renders 0 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: 0;
  clip-rule: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: 0;
  clip-rule: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: 0;
  clip-rule: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: 0;
  clip-rule: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders function 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: hasnot;
  clip-rule: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: has;
  clip-rule: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: hasnot;
  clip-rule: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: has;
  clip-rule: has;
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: invalid.path.1;
  clip-rule: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: invalid.path.1;
  clip-rule: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: invalid.path.1;
  clip-rule: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: invalid.path.1;
  clip-rule: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders negative number 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: -54881;
  clip-rule: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: -54881;
  clip-rule: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: -42365;
  clip-rule: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: -42365;
  clip-rule: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: July;
    clip-rule: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: August;
    clip-rule: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: September;
    clip-rule: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-rule: November;
    clip-rule: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: July;
    clip-rule: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: August;
    clip-rule: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: September;
    clip-rule: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-rule: November;
    clip-rule: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: May;
    clip-rule: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: June;
    clip-rule: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: April;
    clip-rule: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-rule: November;
    clip-rule: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: May;
    clip-rule: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: June;
    clip-rule: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-rule: April;
    clip-rule: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-rule: November;
    clip-rule: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-clip-rule: July;
    clip-rule: July;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: August;
    clip-rule: August;
  }
}

@media January {
  .c0 {
    -webkit-clip-rule: September;
    clip-rule: September;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: November;
    clip-rule: November;
  }
}

@media June {
  .c0 {
    -webkit-clip-rule: August;
    clip-rule: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-clip-rule: July;
    clip-rule: July;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: August;
    clip-rule: August;
  }
}

@media January {
  .c0 {
    -webkit-clip-rule: September;
    clip-rule: September;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: November;
    clip-rule: November;
  }
}

@media June {
  .c0 {
    -webkit-clip-rule: August;
    clip-rule: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip-rule: January;
    clip-rule: January;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: December;
    clip-rule: December;
  }
}

@media January {
  .c0 {
    -webkit-clip-rule: April;
    clip-rule: April;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: May;
    clip-rule: May;
  }
}

@media June {
  .c0 {
    -webkit-clip-rule: June;
    clip-rule: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip-rule: January;
    clip-rule: January;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: December;
    clip-rule: December;
  }
}

@media January {
  .c0 {
    -webkit-clip-rule: April;
    clip-rule: April;
  }
}

@media April {
  .c0 {
    -webkit-clip-rule: May;
    clip-rule: May;
  }
}

@media June {
  .c0 {
    -webkit-clip-rule: June;
    clip-rule: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: 54881;
  clip-rule: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: 54881;
  clip-rule: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: 42365;
  clip-rule: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: 42365;
  clip-rule: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders string 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: July;
  clip-rule: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: July;
  clip-rule: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: June;
  clip-rule: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: June;
  clip-rule: June;
}

<div
    className="c0"
  />,
]
`;

exports[`clipRule renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-clip-rule: DarkSlateBlue;
  clip-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: DarkSlateBlue;
  clip-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: DarkSlateBlue;
  clip-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-rule: DarkSlateBlue;
  clip-rule: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
